<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:src="@drawable/baseline_add_circle_24"
        />

    <EditText
        android:id="@+id/editName"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:hint="@string/name"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editPhone"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:hint="@string/phone"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:hint="@string/email"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/editPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>